<resources>
    <!-- ランチャーに表示されるアプリ名 -->
    <string name="app_name">nyancalc</string>
    <string name="action_settings">設定</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">電卓</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- メニュー関連の文字列 -->
    <string name="settings_title">設定</string>
    <string name="sound_settings">音声設定</string>
    <string name="display_settings">表示設定</string>

    <!-- Calculator strings -->
    <string name="calc_input_hint">式を入力</string>
    <string name="calc_result_default">0</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_multiply">×</string>
    <string name="calc_btn_divide">÷</string>
    <string name="calc_btn_equals">=</string>
    <string name="calc_btn_clear">C</string>
    <string name="calc_btn_decimal">.</string>
    <string name="calc_error">エラー</string>

    <!-- 開発者支援と免責事項 -->
    <string name="disclaimer_title">免責事項</string>
    <string name="disclaimer_body">
        本アプリの計算結果の正確性については万全を期しておりますが、
        利用者が本アプリを用いて行った行為およびその結果について、
        開発者は一切の責任を負いません。\n\n
        本アプリは自己責任でご利用ください。
    </string>
    <string name="tip_small">少額支援 (¥120)</string>
    <string name="tip_medium">コーヒー代の支援 (¥480)</string>
    <string name="tip_large">ガッツリ応援 (¥1000)</string>
    <string name="menu_title">メニュー</string>
    <string name="donate_title">開発者支援</string>
    <string name="donate_description">開発者への応援のため是非お願いします。機能はすべて無料です。支援金をお支払いいただいても機能は変わりませんが、機能の改善や今後のアプリ開発に役立てていきます。</string>
    <string name="close">閉じる</string>
    <string name="thank_you">ありがとうございます！寄付をいただき、心から感謝いたします。今後のアプリ開発に役立てます。</string>
    <string name="menu">メニュー</string>
    <string name="disclaimer_menu">免責事項</string>
    <string name="tip_menu">開発者支援</string>
    <string name="manual_title">取扱説明書</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>

