<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/donate_title"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSmallTip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tip_small"
        android:textAlignment="textStart"
        app:icon="@android:drawable/btn_star_big_off"
        app:iconGravity="start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMediumTip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tip_medium"
        android:textAlignment="textStart"
        app:icon="@android:drawable/btn_star_big_on"
        app:iconGravity="start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLargeTip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tip_large"
        android:textAlignment="textStart"
        app:icon="@android:drawable/btn_star"
        app:iconGravity="start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelDonate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/close"
        app:iconGravity="start" />

</LinearLayout>
